Updated img overflow issue

--- a/client/src/components/Story/Story.scss
+++ b/client/src/components/Story/Story.scss
@@ -108,6 +108,7 @@
       height: 133px;
       object-fit: cover;
       background-color: $xp-pri;
+      overflow: hidden;
     }
   }
 }
